tests/baselines/reference/withStatementNestedScope.errors.txt
withStatementNestedScope.ts(2,1): error TS1101: 'with' statements are not allowed in strict mode.
withStatementNestedScope.ts(2,1): error TS2410: The 'with' statement is not supported. All symbols in a 'with' block will have type 'any'.


==== withStatementNestedScope.ts (2 errors) ====
    var x = 1;
    with (x) {
    ~~~~
!!! error TS1101: 'with' statements are not allowed in strict mode.
    ~~~~~~~~
!!! error TS2410: The 'with' statement is not supported. All symbols in a 'with' block will have type 'any'.
        function f(a: number) {
            return 1;
        }
        // should be any
        var r = f(1);
    }